# papercast

./: .dockerignore  .env.example  .firebaserc  .gitignore  DEVELOPER_GUIDE.md  Dockerfile  GETTING_STARTED.md  PROJECT_STRUCTURE.md  README.md  TECHNICAL_STACK.md  check_config.py  pyproject.toml  pytest.ini  requirements.txt  run.py  test_credentials.py  test_episode_data.py  test_gcs_repository.py  test_gcs_upload.py
.cursor/rules/: specify-rules.mdc
.github/workflows/: daily-podcast.yml  deploy-api.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
api/: .dockerfile  __init__.py  dependencies.py  main.py  repository.py  repository_gcs.py  requirements.txt  schemas.py
api/routes/: __init__.py  episodes.py  health.py  papers.py
docs/: GCP_SETUP.md  GITHUB_ACTIONS_SETUP.md  SLACK_SETUP.md  api-setup.md  backend-deployment.md  deployment-guide.md  deployment.md  frontend-deployment.md  gcs-based-deployment.md  github-actions-deployment.md  github-actions-setup.md  manual-deployment.md  slack-notification-setup.md  slack-setup.md  testing.md  troubleshooting-credentials.md
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js
frontend/.next/: trace
functions/: main.py  requirements.txt
scripts/: deploy-backend.sh  deploy-frontend.sh  dev-regenerate.py  dev-server.py  dev-server.sh  make_bucket_public.py  run-api.sh  run-fullstack.sh  setup.sh
src/: __init__.py  main.py
src/models/: paper.py  (+2 more)
static-site/: index.html
test-static-site/: index.html
tests/: conftest.py
(+84 files in other folders)
